fixed the tooltip overflow and weird wrapping issues

--- a/Tamil.Grammar.Prosody.Parser.Web/Content/winstrap/src/scss/override/_shame.scss
+++ b/Tamil.Grammar.Prosody.Parser.Web/Content/winstrap/src/scss/override/_shame.scss
@@ -293,6 +293,17 @@ td {
   z-index: 99999;
 }
 
+.popover, .tooltip{
+  font-size: 13px;
+}
+.popover .popover-content{
+  padding: 7px 8px 8px;
+}
+.tooltip-inner, .popover{
+  max-width: 350px;
+  overflow: auto;
+}
+
 @media screen and (max-width: 1200px){
     .navbar-search-wrap{
         position: relative;
